# Copyright 2025 The secretflow authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:discrete_gaussian",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral/arith:number_theory",
        "@abseil-cpp//absl/types:span",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "ypir_client",
    srcs = ["ypir_client.cc"],
    hdrs = ["ypir_client.h"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
    ],
)

psi_cc_library(
    name = "ypir_server",
    srcs = ["ypir_server.cc"],
    hdrs = ["ypir_server.h"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
    ],
)

psi_cc_test(
    name = "client_test",
    srcs = ["client_test.cc"],
    deps = [
        ":client",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

psi_cc_test(
    name = "ypir_client_test",
    srcs = ["ypir_client_test.cc"],
    deps = [
        ":util",
        ":ypir_client",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

psi_cc_test(
    name = "ypir_server_test",
    srcs = ["ypir_server_test.cc"],
    deps = [
        ":util",
        ":ypir_server",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

psi_cc_library(
    name = "params",
    srcs = ["params.cc"],
    hdrs = ["params.h"],
    deps = [
    ],
)

psi_cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
    ],
)

psi_cc_test(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral:util",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/tools:prg",
    ],
)
