# Copyright 2025 The secretflow authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "convolution",
    srcs = ["convolution.cc"],
    hdrs = ["convolution.h"],
    deps = [
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    deps = [
        "params",
        ":util",
        "//psi/algorithm/spiral:discrete_gaussian",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral/arith:number_theory",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "types",
    hdrs = ["types.h"],
    deps = [
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
    ],
)

psi_cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = [
        "server.h",
        "types.h",
    ],
    deps = [
        ":client",
        ":convolution",
        ":params",
        ":types",
        ":util",
        "//psi/algorithm/spiral:discrete_gaussian",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral/arith",
        "//psi/algorithm/spiral/arith:arith_params",
        "//psi/algorithm/spiral/arith:number_theory",
        "@abseil-cpp//absl/types:span",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "params",
    srcs = ["params.cc"],
    hdrs = ["params.h"],
    deps = [
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:util",
    ],
)

psi_cc_library(
    name = "util",
    srcs = [
        "matmul.cpp",
        "util.cc",
    ],
    hdrs = ["util.h"],
    deps = [
        ":types",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
    ],
)

psi_cc_test(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:gadget",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix",
        "//psi/algorithm/spiral:poly_matrix_utils",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral:util",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

psi_cc_test(
    name = "integration_test",
    srcs = ["integration_test.cc"],
    deps = [
        ":client",
        ":server",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:spiral_client",
        "//psi/algorithm/spiral:util",
    ],
)

psi_cc_test(
    name = "rescale_test",
    srcs = ["rescale_test.cc"],
    deps = [
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral/arith",
    ],
)

psi_cc_test(
    name = "scale_k_test",
    srcs = ["scale_k_test.cc"],
    deps = [
        ":client",
        ":server",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral/arith",
    ],
)

psi_cc_test(
    name = "simplepir_minimal_test",
    srcs = ["simplepir_minimal_test.cc"],
    deps = [
        ":client",
        ":server",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:spiral_client",
    ],
)

psi_cc_test(
    name = "fast_dot_product_test",
    srcs = ["fast_dot_product_test.cc"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:params",
    ],
)

psi_cc_test(
    name = "simplepir_basic_flow_test",
    srcs = ["simplepir_basic_flow_test.cc"],
    deps = [
        ":util",
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral/arith",
    ],
)

psi_cc_test(
    name = "automorphism_test",
    srcs = ["automorphism_test.cc"],
    deps = [
        "//psi/algorithm/spiral:params",
        "//psi/algorithm/spiral:poly_matrix_utils",
    ],
)
